--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,14 @@
 @tailwind utilities;
 
 
-*::-webkit-scrollbar {
-  display: none;
+/* Disable text selection globally */
+* {
   user-select: none;
+  -webkit-user-select: none; /* For Safari */
+  -moz-user-select: none;    /* For Firefox */
+  -ms-user-select: none;     /* For old Edge/IE */
 }
+
 /* ...existing code... */
 
 /* Hide scrollbar for Chrome, Edge, Safari */
